syntax = "proto3";

message UserCreatedEvent {
    string public_id = 2;

    string login = 3;

    string email = 4;

    string full_name = 5;

    string role = 6;
}

message UserUpdatedEvent {
    string public_id = 2;

    string login = 3;

    string email = 4;

    string full_name = 5;

    string role = 6;
}

message UserDeletedEvent {
    string public_id = 2;
}